# active_gliner

./: .gitignore  README.md  gliner_inference.py  preprocessing.py  pyproject.toml  requirements.txt  test_cuda.py
data/processed/: stats.json
